tests/lean/wf1.lean.expected.out
wf1.lean:3:12-3:19: error: fail to show termination for
  g
with errors
argument #1 was not used for structural recursion
  failed to eliminate recursive application
    g (x - 1)

argument #2 was not used for structural recursion
  insufficient number of parameters at recursive application 
    g (x - 1)

structural recursion cannot be used

Could not find a decreasing measure.
The arguments relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
           x y
1) 3:12-19 ? ?
Please use `termination_by` to specify a decreasing measure.
